# niftypay

./: Anchor.toml  README.md  package-lock.json  package.json
app/niftyapp/: package-lock.json  package.json
app/niftyapp/public/: index.html
app/niftyapp/src/: App.js
creatorapp/: package.json
creatorapp/src/: App.css  App.tsx  niftypay.json  react-app-env.d.ts  router.tsx  wallet.tsx
creatorapp/src/provider/: anchorProvider.tsx
creatorapp/test-ledger/: faucet-keypair.json  genesis.tar.bz2  snapshot-100-F8CZ3kQ8LrZJHgWsS3usgveMEDjxsKaMJBE1HLwCiBpf.tar.bz2  snapshot-1900-22EyJuci7GiTKhkFCvtLgMBdhA11ip2LEyvKf1dwaK3j.tar.bz2  snapshot-2000-8pRoKRZFjGSRDtF6q3Z66PvHGBQwi29BtnVn2JgABPgJ.tar.bz2  validator-keypair.json  vote-account-keypair.json
creatorapp/test-ledger/accounts/: 0.1  100.0  1000.19  1002.20  1100.21  1123.22  1200.23  1204.24  126.2  1300.25  1322.26  1400.27  1418.28  1500.29  1508.30  1600.31  1610.32  1700.33  1723.34  1800.35  1816.36  1900.37  1926.38  200.3  2000.39  2010.40  212.4  300.5  305.6  400.7  401.8  500.9  504.10  600.11  621.12  700.13  703.14  800.15  821.16  900.17  (+1 more)
creatorapp/test-ledger/rocksdb/: 000213.sst  000216.sst  000218.sst  000228.sst  000233.sst  000235.sst  IDENTITY  (+10 more)
merchantapp/: package.json
merchantapp/src/: App.css  App.tsx  index.pcss  types.ts
niftyapp/: .gitignore  package-lock.json  package.json
niftyapp/src/: App.css  App.tsx  niftypay.json  niftypay.ts  qr.tsx  react-app-env.d.ts  router.tsx  types.ts  wallet.tsx
programs/niftypay/: Cargo.toml
programs/niftypay/src/: lib.rs
tests/: niftypay.ts
(+45 files in other folders)
